# nomorepoliticsplease

./: Cargo.toml  Dockerfile  README.md
extension/: background.js  content.js  manifest.json
src/: main.rs
static/: index-mini.html  index.html  privacy-policy-mini.html  privacy-policy.html
