[package]
name = "nomorepoliticsplease"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
once_cell = "1.19.0"
redis = "0.26.1"
rust-embed = "8.5.0"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = {version= "0.5.2", features=["cors"]}
